--- a/TOTP_BugTracker/Views/Projects/ArchivedIndex.cshtml
+++ b/TOTP_BugTracker/Views/Projects/ArchivedIndex.cshtml
@@ -79,12 +79,11 @@
                 <td>
                     |<a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                     |<a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                    |<a asp-action="Archive" asp-route-id="@item.Id">Archive</a>
-                    |<a asp-action="AssignProjectManager" asp-route-id="@item.Id">Assign PM</a>
+                    |<a asp-action="Restore" asp-route-id="@item.Id">Restore</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
 
-<a asp-action="ArchivedIndex">View archived items</a>
+<a asp-controller="Home" asp-action="Index">Home</a>
