--- a/TOTP_BugTracker/Views/Projects/Create.cshtml
+++ b/TOTP_BugTracker/Views/Projects/Create.cshtml
@@ -13,10 +13,10 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="Create" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>@*
             <input type="hidden" asp-for="CompanyId" class="form-control" />
-            <input type="hidden" asp-for="StartDate" class="form-control" />
+            <input type="hidden" asp-for="StartDate" class="form-control" />*@
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -38,8 +38,8 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProjectPriority" class="control-label">Project Priority</label>
-                <select asp-for="ProjectPriority" class="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
+                <label asp-for="ProjectPriorityId" class="control-label">Project Priority</label>
+                <select asp-for="ProjectPriorityId" class="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="ImageFormFile" class="control-label">Cover Photo</label>
@@ -49,11 +49,11 @@
             <div class="form-group">
                 <img id="imageData" class="img-fluid img-thumbnail" style="width:100px;height:80px" src="@_ImageService.ConvertByteArrayToFile(Model.ImageData!,Model.ImageType!,(int)DefaultImage.Project)" />
             </div>
-            <div class="form-group form-check">
+            @*<div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Archived" /> @Html.DisplayNameFor(model => model.Archived)
                 </label>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
