--- a/TOTP_BugTracker/Views/Projects/Restore.cshtml
+++ b/TOTP_BugTracker/Views/Projects/Restore.cshtml
@@ -1,12 +1,12 @@
 ﻿@model TOTP_BugTracker.Models.Project
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Archive";
 }
 
-<h1>Delete</h1>
+<h1>Restore Project</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to restore this?</h3>
 <div>
     <h4>Project</h4>
     <hr />
@@ -75,13 +75,13 @@
             @Html.DisplayNameFor(model => model.ProjectPriority)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProjectPriority.Id)
+            @Html.DisplayFor(model => model.ProjectPriority!.Id)
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Restore">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Restore" class="btn btn-danger" /> |
+        <a asp-action="ArchivedIndex">Back to List</a>
     </form>
 </div>
