--- a/TOTP_BugTracker/Views/Projects/Index.cshtml
+++ b/TOTP_BugTracker/Views/Projects/Index.cshtml
@@ -2,6 +2,8 @@
 @using TOTP_BugTracker.Enums;
 @using TOTP_BugTracker.Services.Interfaces;
 @inject IImageService _ImageService;
+@inject IProjectService _ProjectService;
+@inject IRolesService _RolesService;
 
 @{
     ViewData["Title"] = "Index";
@@ -29,6 +31,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.EndDate)
+            </th>
+            <th>
+                P.M.
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ImageFormFile)
@@ -63,6 +68,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.EndDate)
+                </td>
+                <td>
+                    @await _ProjectService.GetProjectManagerAsync(item.Id)
                 </td>
                 <td>
                     <img class="img-fluid" src="@_ImageService.ConvertByteArrayToFile(item.ImageData!,item.ImageType!,(int)DefaultImage.Project)" alt="Post Images">
