--- a/TOTP_BugTracker/Views/Shared/_Layout.cshtml
+++ b/TOTP_BugTracker/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Projects" asp-action="MyProjects">My Projects</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Projects" asp-action="AllProjects">All Projects</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Projects" asp-action="ArchivedIndex">Archived Projects</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Projects" asp-action="UnassignedProjects">Unassigned Projects</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
