--- a/TOTP_BugTracker/Views/Projects/Create.cshtml
+++ b/TOTP_BugTracker/Views/Projects/Create.cshtml
@@ -1,10 +1,16 @@
 ﻿@model TOTP_BugTracker.Models.Project
+@using Microsoft.AspNetCore.Identity
 @using TOTP_BugTracker.Enums;
 @using TOTP_BugTracker.Services.Interfaces;
+@inject IRolesService _RolesService;
+@inject IProjectService _ProjectService;
 @inject IImageService _ImageService;
+@inject UserManager<BTUser> _UserManager;
+@using TOTP_BugTracker.Models.ViewModels;
 
 @{
     ViewData["Title"] = "Create";
+    ViewData["Title"] = "Assign PM";
 }
 
 <h1>Create</h1>
@@ -50,10 +56,23 @@
                 <img id="imageData" class="img-fluid img-thumbnail" style="width:100px;height:80px" src="@_ImageService.ConvertByteArrayToFile(Model.ImageData!,Model.ImageType!,(int)DefaultImage.Project)" />
             </div>
             @*<div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Archived" /> @Html.DisplayNameFor(model => model.Archived)
-                </label>
+            <label class="form-check-label">
+            <input class="form-check-input" asp-for="Archived" /> @Html.DisplayNameFor(model => model.Archived)
+            </label>
             </div>*@
+            @*@if (User.IsInRole("Admin"))
+            {
+                <form method="post" asp-action="AssignProjectManager" asp-controller="Projects">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label class="control-label">Select Project Manager</label>
+                        <select asp-for="@Model.Members" class="form-control" asp-items="@ViewBag.PMList">
+                            <option></option>
+                        </select>
+                        <span asp-validation-for="@Model.Members" class="text-danger"></span>
+                    </div>
+                </form>
+            }*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
