--- a/TOTP_BugTracker/Views/Invites/Create.cshtml
+++ b/TOTP_BugTracker/Views/Invites/Create.cshtml
@@ -27,10 +27,10 @@
                 <input asp-for="CompanyToken" class="form-control" />
                 <span asp-validation-for="CompanyToken" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="CompanyId" class="control-label"></label>
                 <select asp-for="CompanyId" class ="form-control" asp-items="ViewBag.CompanyId"></select>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="ProjectId" class="control-label"></label>
                 <select asp-for="ProjectId" class ="form-control" asp-items="ViewBag.ProjectId"></select>
