--- a/TOTP_BugTracker/Views/Projects/Create.cshtml
+++ b/TOTP_BugTracker/Views/Projects/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TOTP_BugTracker.Models.Project
+﻿@model TOTP_BugTracker.Models.ViewModels.AssignPMViewModel
 @using Microsoft.AspNetCore.Identity
 @using TOTP_BugTracker.Enums;
 @using TOTP_BugTracker.Services.Interfaces;
@@ -10,7 +10,6 @@
 
 @{
     ViewData["Title"] = "Create";
-    ViewData["Title"] = "Assign PM";
 }
 
 <h1>Create</h1>
@@ -24,37 +23,46 @@
             <input type="hidden" asp-for="CompanyId" class="form-control" />
             <input type="hidden" asp-for="StartDate" class="form-control" />*@
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="Project.Name" class="control-label"></label>
+                <input asp-for="Project.Name" class="form-control" />
+                <span asp-validation-for="Project.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control" rows="7"></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="Project.Description" class="control-label"></label>
+                <textarea asp-for="Project.Description" class="form-control" rows="7"></textarea>
+                <span asp-validation-for="Project.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StartDate" class="control-label"></label>
-                <input asp-for="StartDate" class="form-control" />
-                <span asp-validation-for="StartDate" class="text-danger"></span>
+                <label asp-for="Project.StartDate" class="control-label"></label>
+                <input asp-for="Project.StartDate" class="form-control" />
+                <span asp-validation-for="Project.StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EndDate" class="control-label"></label>
-                <input asp-for="EndDate" class="form-control" />
-                <span asp-validation-for="EndDate" class="text-danger"></span>
+                <label asp-for="Project.EndDate" class="control-label"></label>
+                <input asp-for="Project.EndDate" class="form-control" />
+                <span asp-validation-for="Project.EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProjectPriorityId" class="control-label">Project Priority</label>
-                <select asp-for="ProjectPriorityId" class="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
+                <label asp-for="Project.ProjectPriorityId" class="control-label">Project Priority</label>
+                <select asp-for="Project.ProjectPriorityId" class="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ImageFormFile" class="control-label">Cover Photo</label>
-                <input type="file" asp-for="ImageFormFile" class="form-control" accept=".png,.jpg,.jpeg,.gif" onchange="document.getElementById('imageData').src = window.URL.createObjectURL(this.files[0])" />
-                <span asp-validation-for="ImageFormFile" class="text-danger"></span>
+                <label asp-for="Project.ImageFormFile" class="control-label">Cover Photo</label>
+                <input type="file" asp-for="Project.ImageFormFile" class="form-control" accept=".png,.jpg,.jpeg,.gif" onchange="document.getElementById('imageData').src = window.URL.createObjectURL(this.files[0])" />
+                <span asp-validation-for="Project.ImageFormFile" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <img id="imageData" class="img-fluid img-thumbnail" style="width:100px;height:80px" src="@_ImageService.ConvertByteArrayToFile(Model.ImageData!,Model.ImageType!,(int)DefaultImage.Project)" />
+                <img id="imageData" class="img-fluid img-thumbnail" style="width:100px;height:80px" src="@_ImageService.ConvertByteArrayToFile(Model.Project!.ImageData!,Model.Project.ImageType!,(int)DefaultImage.Project)" />
             </div>
+            <div class="form-group">
+                <select asp-for="PMID" class="form-control" asp-items="@Model.PMList">
+                    <option></option>
+                </select>
+            </div>
+
+
+
+
             @*<div class="form-group form-check">
             <label class="form-check-label">
             <input class="form-check-input" asp-for="Archived" /> @Html.DisplayNameFor(model => model.Archived)
@@ -62,16 +70,16 @@
             </div>*@
             @*@if (User.IsInRole("Admin"))
             {
-                <form method="post" asp-action="AssignProjectManager" asp-controller="Projects">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-group">
-                        <label class="control-label">Select Project Manager</label>
-                        <select asp-for="@Model.Members" class="form-control" asp-items="@ViewBag.PMList">
-                            <option></option>
-                        </select>
-                        <span asp-validation-for="@Model.Members" class="text-danger"></span>
-                    </div>
-                </form>
+            <form method="post" asp-action="AssignProjectManager" asp-controller="Projects">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+            <label class="control-label">Select Project Manager</label>
+            <select asp-for="@Model.Members" class="form-control" asp-items="@ViewBag.PMList">
+            <option></option>
+            </select>
+            <span asp-validation-for="@Model.Members" class="text-danger"></span>
+            </div>
+            </form>
             }*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
