Added notification and email services.

--- a/TOTP_BugTracker/Views/Shared/_Layout.cshtml
+++ b/TOTP_BugTracker/Views/Shared/_Layout.cshtml
@@ -68,6 +68,7 @@
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdown">
                                         <li><a class="dropdown-item" asp-area="" asp-controller="Projects" asp-action="UnassignedProjects">Unassigned Projects</a></li>
+                                        <li><a asp-action="Create" asp-controller="Invites">Company Invite</a></li>
                                     </ul>
                                 </li>
                             }
