--- a/TOTP_BugTracker/Views/Projects/UnassignedProjects.cshtml
+++ b/TOTP_BugTracker/Views/Projects/UnassignedProjects.cshtml
@@ -4,15 +4,17 @@
 @inject IImageService _ImageService;
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Unassigned Projects";
 }
 
-<h1>Index</h1>
+<link href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" rel="stylesheet" />
+
+<h1>Unassigned Projects</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table" id="UnassignedProjects">
     <thead>
         <tr>
             <th>
@@ -88,3 +90,13 @@
 </table>
 
 <a asp-action="ArchivedIndex">View archived items</a>
+
+@section scripts {
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            $('#UnassignedProjects').DataTable();
+        });
+    </script>
+}
