--- a/TOTP_BugTracker/Views/Tickets/Edit.cshtml
+++ b/TOTP_BugTracker/Views/Tickets/Edit.cshtml
@@ -30,6 +30,13 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label for="commentBody" class="control-label">Ticket Message</label>
+                <textarea name="commentBody" class="form-control" rows="7"></textarea>
+                <span validation-for="commentBody" class="text-danger"></span>
+            </div>
+
             @*<div class="form-group">
             <label asp-for="TicketTypeId" class="control-label"></label>
             <select asp-for="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
