--- a/TOTP_BugTracker/wwwroot/css/site.css
+++ b/TOTP_BugTracker/wwwroot/css/site.css
@@ -1361,7 +1361,7 @@ progress {
 }
 
     .blockquote-footer:before {
-        content: "— "
+        content: "ï¿½ï¿½"
     }
 
 .img-fluid, .img-thumbnail {
@@ -23310,7 +23310,7 @@ html body {
     .toastify .toast-close:before {
         --bs-text-opacity: 1;
         color: rgba(var(--bs-gray-600-rgb),var(--bs-text-opacity));
-        content: "×";
+        content: "ï¿½";
         display: block;
         font-size: 1.875rem;
         font-weight: 300;
