--- a/TOTP_BugTracker/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TOTP_BugTracker/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,67 +6,56 @@
 }
 
 <body class="login">
-        <div class="container px-sm-10">
-            <div class="grid columns-2 gap-4">
-                <!-- BEGIN: Login Info -->
-                <div class="g-col-2 g-col-xl-1 d-none d-xl-flex flex-column min-vh-screen">
-                    <a href="" class="-intro-x d-flex align-items-center pt-5">
-                        <img alt="Icewall Bootstrap HTML Admin Template" class="w-6" src="dist/images/logo.svg">
-                        <span class="text-white fs-lg ms-3"> Ice<span class="fw-medium">wall</span> </span>
-                    </a>
-                    <div class="my-auto">
-                        <img alt="Icewall Bootstrap HTML Admin Template" class="-intro-x w-1/2 mt-n16" src="dist/images/illustration.svg">
-                        <div class="-intro-x text-white fw-medium fs-4xl lh-base mt-10">
-                            A few more clicks to 
-                            <br>
-                            sign in to your account.
-                        </div>
-                        <div class="-intro-x mt-5 fs-lg text-white text-opacity-70 dark-text-gray-500">Manage all your e-commerce accounts in one place</div>
-                    </div>
-                </div>
-                <!-- END: Login Info -->
-                <!-- BEGIN: Login Form -->
-                <div class="g-col-2 g-col-xl-1 h-screen h-xl-auto d-flex py-5 py-xl-0 my-10 my-xl-0">
-                    <div class="my-auto mx-auto ms-xl-20 bg-white dark-bg-dark-1 bg-xl-transparent px-5 px-sm-8 py-8 p-xl-0 rounded-2 shadow-md shadow-xl-none w-full w-sm-3/4 w-lg-2/4 w-xl-auto">
-                        <h2 class="intro-x fw-bold fs-2xl fs-xl-3xl text-center text-xl-start">
-                            Sign In
-                        </h2>
-                        <div class="intro-x mt-2 text-gray-500 d-xl-none text-center">A few more clicks to sign in to your account. Manage all your e-commerce accounts in one place</div>
-                        <div class="intro-x mt-8">
-                            <input type="text" class="intro-x login__input form-control py-3 px-4 border-gray-300 d-block" placeholder="Email">
-                            <input type="password" class="intro-x login__input form-control py-3 px-4 border-gray-300 d-block mt-4" placeholder="Password">
-                        </div>
-                        <div class="intro-x d-flex text-gray-700 dark-text-gray-600 fs-xs fs-sm-sm mt-4">
-                            <div class="d-flex align-items-center me-auto">
-                                <input id="remember-me" type="checkbox" class="form-check-input border me-2">
-                                <label class="cursor-pointer select-none" for="remember-me">Remember me</label>
+    <div class="container px-sm-10">
+        <div class="grid columns-2 gap-4">
+            <!-- BEGIN: Login Form -->
+            <div class="g-col-2 g-col-xl-1 h-screen h-xl-auto d-flex py-5 py-xl-0 my-10 my-xl-0">
+                <div class="my-auto mx-auto ms-xl-20 bg-white dark-bg-dark-1 bg-xl-transparent px-5 px-sm-8 py-8 p-xl-0 rounded-2 shadow-md shadow-xl-none w-full w-sm-3/4 w-lg-2/4 w-xl-auto">
+                    <h2 class="intro-x fw-bold fs-2xl fs-xl-3xl text-center text-xl-start">
+                        Sign In
+                    </h2>
+                    <form id="account" method="post" class="row">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="row row-cols-1 g-2 pb-5">
+                            <div class="col-lg-6 col-md-12 col-12">
+                                <div class="form-group">
+                                    <label asp-for="Input.Email">UserName</label>
+                                    <input asp-for="Input.Email" autocomplete="username" type="text">
+                                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                                </div>
                             </div>
-                            <a href="">Forgot Password?</a> 
+                            <div class="col-lg-6 col-md-12 col-12">
+                                <div class="form-group">
+                                    <label asp-for="Input.Password" autocomplete="current-password" aria-required="true">Password</label>
+                                    <input asp-for="Input.Password" />
+                                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <button type="submit" class="axil-button button-rounded btn-primary">Log in</button>
+                            </div>
                         </div>
-                        <div class="intro-x mt-5 mt-xl-8 text-center text-xl-start">
-                            <button class="btn btn-primary py-3 px-4 w-full w-xl-32 me-xl-3 align-top">Login</button>
-                            <button class="btn btn-outline-secondary py-3 px-4 w-full w-xl-32 mt-3 mt-xl-0 align-top">Sign up</button>
-                        </div>
-                        <div class="intro-x mt-10 mt-xl-24 text-gray-700 dark-text-gray-600 text-center text-xl-start">
-                            By signin up, you agree to our 
-                            <br>
-                            <a class="text-theme-17 dark-text-gray-300" href="">Terms and Conditions</a> & <a class="text-theme-17 dark-text-gray-300" href="">Privacy Policy</a> 
-                        </div>
+                    </form>
+                    <div class="intro-x mt-10 mt-xl-24 text-gray-700 dark-text-gray-600 text-center text-xl-start">
+                        By signin up, you agree to our
+                        <br>
+                        <a class="text-theme-17 dark-text-gray-300" href="">Terms and Conditions</a> & <a class="text-theme-17 dark-text-gray-300" href="">Privacy Policy</a>
                     </div>
                 </div>
-                <!-- END: Login Form -->
             </div>
+            <!-- END: Login Form -->
         </div>
-        <!-- BEGIN: Dark Mode Switcher-->
-        <div data-url="login-dark-login.html" class="dark-mode-switcher cursor-pointer shadow-md position-fixed bottom-0 end-0 box dark-bg-dark-2 border rounded-pill w-40 h-12 d-flex align-items-center justify-content-center z-50 mb-10 me-10">
-            <div class="me-4 text-gray-700 dark-text-gray-300">Dark Mode</div>
-            <div class="dark-mode-switcher__toggle border"></div>
-        </div>
-        <!-- END: Dark Mode Switcher-->
-        <!-- BEGIN: JS Assets-->
-        <script src="dist/js/app.js"></script>
-        <!-- END: JS Assets-->
-    </body>
+    </div>
+    <!-- BEGIN: Dark Mode Switcher-->
+    <div data-url="login-dark-login.html" class="dark-mode-switcher cursor-pointer shadow-md position-fixed bottom-0 end-0 box dark-bg-dark-2 border rounded-pill w-40 h-12 d-flex align-items-center justify-content-center z-50 mb-10 me-10">
+        <div class="me-4 text-gray-700 dark-text-gray-300">Dark Mode</div>
+        <div class="dark-mode-switcher__toggle border"></div>
+    </div>
+    <!-- END: Dark Mode Switcher-->
+    <!-- BEGIN: JS Assets-->
+    <script src="dist/js/app.js"></script>
+    <!-- END: JS Assets-->
+</body>
 
 
 
