--- a/TOTP_BugTracker/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/TOTP_BugTracker/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -9,18 +9,43 @@
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+        <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Username" class="form-control" disabled />
-                <label asp-for="Username" class="form-label"></label>
+            <div class="col-md-6">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-floating">
+                    <input asp-for="Username" class="form-control" disabled />
+                                        <label asp-for="Username" class="form-label"></label>
+                    
+                </div>
+                <div class="form-floating">
+                    <input asp-for="Input.FirstName" class="form-control" />
+                                        <label asp-for="Input.FirstName"></label>
+                                        <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-floating">
+                    <input asp-for="Input.LastName" class="form-control" />
+                                        <label asp-for="Input.LastName"></label>
+                                        <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                </div>
+                <div class="form-floating">
+                    <input asp-for="Input.PhoneNumber" class="form-control" />
+                                        <label asp-for="Input.PhoneNumber" class="form-label"></label>
+                                        <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                </div>
+                <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <label asp-for="Input.PhoneNumber" class="form-label"></label>
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            <div class="col-md-3">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                @*<div class="form-floating">
+                    <label asp-for="Input.ImageData" style="width: 100%;"></label>
+                    <img id="imageFileData" class="img-fluid img-thumbnail rounded" src="@_ImageService.ConvertByteArrayToFile(Model.Input.ImageData,Model.Input.ImageType,(int)DefaultImage.BlogUser)" />
+                    <input type="file" asp-for="Input.ImageFile" class="form-control" accept=".png,.jpg,.jpeg,.gif,.tif"
+                           style="border:0px!important;padding: 0px;padding-top: 10px;padding-bottom: 30px;"
+                           onchange="document.getElementById('imageFileData').src = window.URL.createObjectURL(this.files[0])" />
+                    <span asp-validation-for="Input.ImageFile" class="text-danger"></span>
+                </div>*@
             </div>
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
         </form>
     </div>
 </div>
